# fbi_api

./: .gitignore  LICENSE  README.md  README_developers.md  downloads.json  metadata_all.csv  pyproject.toml  track_downloads.py
.github/: streamlit.yml
.github/workflows/: chicago_crime.yml  nyc_crime.yml  streamlit.yml  tests.yml  track_downloads.yml
ad_hoc/: publish.sh  track_downloads.py
examples/: fbi.ipynb
src/fbi_api/: __init__.py  ai.py  config.yml  core.py  utils.py
tests/: conftest.py  test_get_metadata.py  test_json.py  test_rate_limit_backoff.py
tests/data/: mock_response_get_agency_metrics.json  mock_response_get_crime_statistics.json  mock_response_get_metadata.json
